package sample;

import javafx.event.ActionEvent;
import javafx.event.Event;
import javafx.scene.Scene;

public interface LayoutsInterface {
   public void back(ActionEvent event);
}
