package sample;

import javafx.event.Event;
import javafx.scene.Scene;

public interface MainInterface extends LayoutsInterface{
   void  setMainLayout(Event event, Scene scene);
}
