@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    interface sample.LayoutsInterface {
        {abstract} + back()
    }
  }
  

  namespace sample {
    class sample.LoginScreen {
        ~ error : Label
        ~ login_display : Label
        ~ password : TextField
        ~ username : TextField
        ~ users : ArrayList<User>
        - type : String
        + Login()
        + back()
        + setMainLayout()
        + setType()
        - fetch()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  namespace sample {
    interface sample.MainInterface {
        {abstract} + setMainLayout()
    }
  }
  

  namespace sample {
    class sample.MainScreen {
        + adminClick()
        + back()
        + setMainLayout()
        + studentClick()
        + teacherClick()
    }
  }
  

  namespace sample {
    class sample.Mcq {
        - body : String
        - cop : int
        - id : long
        - op1 : String
        - op2 : String
        - op3 : String
        - op4 : String
        + Mcq()
        + Mcq()
        + getBody()
        + getCop()
        + getId()
        + getOp1()
        + getOp2()
        + getOp3()
        + getOp4()
        + setBody()
        + setCop()
        + setId()
        + setOp1()
        + setOp2()
        + setOp3()
        + setOp4()
        + toString()
    }
  }
  

  namespace sample {
    class sample.User {
        - id : long
        - name : String
        - password : String
        - username : String
        + User()
        + User()
        + getId()
        + getName()
        + getPassword()
        + getUsername()
        + setId()
        + setName()
        + setPassword()
        + setUsername()
    }
  }
  

  namespace sample {
    class sample.admin {
        - post : String
        + admin()
        + getPost()
        + setPost()
    }
  }
  

  namespace sample {
    class sample.student {
        - semester : String
        + getSemester()
        + setSemester()
        + student()
        + student()
    }
  }
  

  namespace sample {
    class sample.teacher {
        - subject : String
        + getSubject()
        + setSubject()
        + teacher()
        + teacher()
    }
  }
  

  sample.LoginScreen .up.|> sample.MainInterface
  sample.Main -up-|> javafx.application.Application
  sample.MainScreen .up.|> sample.MainInterface
  sample.Mcq .up.|> java.io.Serializable
  sample.User .up.|> java.io.Serializable
  sample.admin -up-|> sample.User
  sample.student -up-|> sample.User
  sample.teacher -up-|> sample.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
